# maizono_os

./: .dockerignore  .gdb_history  .gitignore  Cargo.toml  Makefile.toml  OVMF_VARS.fd  README.md  bootloader-debug.py  bootloader-watch-debug-point.py  debug.txt  debug_kernel_from.py  local_device.txt  mouse.txt  onlyret.asm  runtime.dockercompose5a936267-6301-4cfc-bd00-7042b21a3aed.yml  runtime.dockerfile5a936267-6301-4cfc-bd00-7042b21a3aed  ssnni.py
apps/rpncalc/: Cargo.toml
apps/rpncalc/.cargo/: config.toml
apps/rpncalc/src/: main.rs
bootloader/: Cargo.toml
bootloader/src/: kernel.rs  main.rs
build-targets/: x86_64-app.json  x86_64-kernel.json
common/: Cargo.toml
common/src/: address.rs  array.rs  arrayqueue.rs  arrayvec.rs  boot.rs  error.rs  graphic.rs  lib.rs  matrix.rs
font_generator/: Cargo.toml  Tamzen8x16r.bdf  Tamzen8x16r.rsfont
font_generator/src/: main.rs
ghidra/maizono_os.rep/: project.prp  projectState
ghidra/maizono_os.rep/idata/: ~index.bak
ghidra/maizono_os.rep/idata/00/: 00000001.prp  00000002.prp
ghidra/maizono_os.rep/user/: ~index.bak  ~journal.bak
ghidra/maizono_os.rep/user/00/: 00000001.prp  00000002.prp
ghidra/maizono_os.rep/user/00/~00000001.db/: db.1.gbf
ghidra/maizono_os.rep/user/00/~00000002.db/: db.1.gbf
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: acpi.rs  allocator.rs  apic.rs  arch.rs  bitmap_mem_manager.rs  cpu.rs  error.rs  fat.rs  frame_manager.rs  gdt.rs  interrupts.rs  layer.rs  logger.rs  main.rs  memory.rs  memory_manager.rs  memory_map.rs  message.rs  mouse.rs  mutex.rs  paging.rs  pci.rs  phys_mem_manager.rs  ps2_mouse.rs  segment.rs  segmentation.rs  serial.rs  syscall.rs  task.rs  terminal.rs  timer.rs  types.rs  uart.rs  util.rs  window.rs  x64.rs
kernel/src/allocator/: bump.rs  bump_allocator.rs  fixed_size_block_allocator.rs  linked_list_allocator.rs  mod.rs
kernel/src/device/ps2/: controller.rs  keyboard.rs  mod.rs  mouse.rs
kernel/src/framebuffer/: mod.rs
kernel/src/graphic/: canvas.rs  char.rs  console.rs  error.rs  font.rs  frame_buffer.rs  framebuffer.rs  layer.rs  mod.rs  mouse.rs  window.rs
kernel/src/interrupts/: apic.rs  mod.rs
kernel/src/pci/: error.rs  mod.rs
kernel/src/pci/usb/: device_manager.rs  error.rs  memory.rs  mod.rs  ring.rs  xhci.rs
kernel/src/ps2/: controller.rs  keyboard.rs  mod.rs  mouse.rs
kernel/src/usb/: device_manager.rs  memory.rs  mod.rs  xhci.rs
proc-macro-lib/: Cargo.toml
proc-macro-lib/src/: lib.rs
src/: main.rs
