[package]
name = "kernel"
version = "0.1.0"
# edition = "2021"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror-no-std = "2.0.2"
common = { path = "../common" }
spin = "0.9.8"
arrayvec = { version = "0.7.6", default-features = false }
xhci = "0.9.2"
# anyhow = { version = "1.0.89", default-features = false }
uefi = "0.32.0"
modular-bitfield = "0.11.2"
x86_64 = "0.15.2"
static_assertions = "1.1.0"
bitfield = "0.17.0"
acpi = { version = "5.1.0", default-features = false }
uart_16550 = "0.3.2"
linked_list_allocator = "0.10.5"
# ps2 = "0.2.0"
