[package]
name = "kernel"
version = "0.1.0"
# edition = "2021"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror-no-std = "2.0.2"
common = { path = "../common" }
spin = "0.9.8"
xhci = "0.9.2"
uefi = "0.32.0"
modular-bitfield = "0.11.2"
x86_64 = "0.15.2"
static_assertions = "1.1.0"
acpi = { version = "5.1.0", default-features = false }
uart_16550 = "0.3.2"
linked_list_allocator = "0.10.5"
slotmap = { version = "1.0.7", default-features = false }
arrayvec = { version = "0.7.6", default-features = false }
glam = { version = "0.30.3", default-features = false, features = [
    "nostd-libm",
] }
anyhow = { version = "1.0.98", default-features = false }
log = { version = "0.4.27", default-features = false }
priority-queue = { version = "2.5.0", default-features = false }
pc-keyboard = "0.8.0"
num_enum = { version = "0.7.4", default-features = false }
